--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,18 @@
 /* You can add global styles to this file, and also import other style files */
+nb-layout-column {
+    overflow-y: scroll !important;
+    height: 100vh;
+}
+
+
+@media only screen and (max-width: 600px) {
+    
+    .columns{
+        display: block !important;
+        overflow-y: scroll !important
+    }
+    nb-layout-column:first-child{
+        margin: 10em !important;
+    }
+    
+}
