--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,11 +1,19 @@
 .container{
     overflow: scroll;
 }
+
+nb-icon{
+    cursor: pointer;
+    font-size: 3rem;
+    margin-right: 1em;
+}
 .mainDiv{
     padding: 1rem;
     font-size: 1rem;
     text-decoration: none;
     text-align: center;
+    display: flex;
+    align-items: center;
 }
 .mainDiv a{
     text-decoration: none;
@@ -16,6 +24,21 @@
     font-weight: 500;
     text-transform: capitalize;
     cursor: pointer;
+}
+h6{
+    margin: 0;
+    text-align: center;
+    padding: 1rem;
+}
+ p{
+    margin: 0;
+    box-shadow: 1px 1px 3px 1px black;
+    padding: .5rem;
+    font-size: 1.2rem;
+    text-align: left;
+    word-spacing: 1px;
+    font-weight: 500;
+    line-height: 1em;
 }
 
  
