--- a/src/app/loadcomponent/loadcomponent.component.html
+++ b/src/app/loadcomponent/loadcomponent.component.html
@@ -1,4 +1,4 @@
 
 <ng-container *ngFor="let data of messages">
-        <app-dynocomponent [i]=" data" ></app-dynocomponent>       
+        <app-dynocomponent (message)="getMessage()" [i]="data" ></app-dynocomponent>       
 </ng-container>
