--- a/src/app/loadcomponent/dynocomponent/dynocomponent.component.css
+++ b/src/app/loadcomponent/dynocomponent/dynocomponent.component.css
@@ -12,3 +12,11 @@ h6{
     margin: 0;
     width: 100%;
 }
+#spinner {
+    margin: auto;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0
+  }
