--- a/src/app/loadcomponent/loadcomponent.component.html
+++ b/src/app/loadcomponent/loadcomponent.component.html
@@ -1,4 +1,29 @@
-
+<div class="d-flex justify-content-center" *ngIf="isLoading" >
+                <div class="spinner-grow text-primary" role="status">
+                    <span class="sr-only">Loading...</span>
+                  </div>
+                  <div class="spinner-grow text-secondary" role="status">
+                    <span class="sr-only">Loading...</span>
+                  </div>
+                  <div class="spinner-grow text-success" role="status">
+                      <span class="sr-only">Loading...</span>
+                    </div>
+                    <div class="spinner-grow text-danger" role="status">
+                      <span class="sr-only">Loading...</span>
+                    </div>
+                    <div class="spinner-grow text-warning" role="status">
+                      <span class="sr-only">Loading...</span>
+                    </div>
+                    <div class="spinner-grow text-info" role="status">
+                      <span class="sr-only">Loading...</span>
+                    </div>
+</div>
+<div *ngIf="errorMessage" class="card lazyComponenet">
+                <h6 class="card-header text-center text-white bg-danger mb-3">Error</h6>
+                <p class="card-text">{{errorMessage}}</p>
+        </div>
 <ng-container *ngFor="let data of messages">
+                
+                          
         <app-dynocomponent (message)="getMessage()" [i]="data" ></app-dynocomponent>       
 </ng-container>
