--- a/src/app/loadcomponent/dynocomponent/dynocomponent.component.css
+++ b/src/app/loadcomponent/dynocomponent/dynocomponent.component.css
@@ -1,3 +1,60 @@
+nb-card{
+    box-shadow: 1px 1px 3px 1px black;
+}
+nb-card-header{
+    display: flex;
+    padding: 5px;
+    justify-content: space-around;
+    justify-items: center;
+}
+nb-card nb-card-header p{
+    margin: 5px;
+    text-align: left;
+    /* padding: 1px; */
+    color: white;
+    font-size: 1rem;
+    font-weight: 600;
+    text-align: center;
+    letter-spacing: .8px;
+}
+nb-card nb-card-header button{
+   background-color:  #0095ff;
+   border-color: #0095ff;
+   margin-right: 0;
+   
+}
+nb-card nb-card-header button nb-icon{
+    height: 20px !important;
+}
+nb-card nb-card-header button :hover{
+    border: 0;
+}
+
+.popupMenuStyle{
+    border: 1px solid black;
+    background: white;
+    
+    list-style-type: none;
+}
+.popupMenuStyle ul{
+    margin: 0;
+    padding: 0;
+    background-color: beige;
+    text-align: center;
+    font-weight: 600;
+    letter-spacing: 1px;
+}
+.popupMenuStyle ul li {
+    list-style-type: none;
+    padding: 1rem;
+    cursor: pointer;
+    transition-duration: 350ms;
+    transition-property: background-color;
+}
+.popupMenuStyle ul li:hover{
+    background-color: coral;
+    color: wheat;    
+}
 .image{
     width: 100%;
     height: auto;
