--- a/src/app/loadcomponent/loadcomponent.component.css
+++ b/src/app/loadcomponent/loadcomponent.component.css
@@ -11,6 +11,7 @@ h6{
     letter-spacing: 1px;
 }
 .card-flex{
+    
     display: flex;
     flex: 0 0 50%;
     flex-wrap: wrap;
@@ -28,6 +29,7 @@ h6{
 
 @media only screen and (max-width: 768px){
     .card-flex{
+        margin-top: 1rem !important;
         display: inline-block;
     }
 }
