--- a/src/app/loadcomponent/loadcomponent.component.html
+++ b/src/app/loadcomponent/loadcomponent.component.html
@@ -1,4 +1,4 @@
-<div class="d-flex justify-content-center" *ngIf="isLoading" >
+<div class="d-flex justify-content-center" style="height: 25vh; margin-top: 1rem; align-items: center;" *ngIf="isLoading"  >
                 <div class="spinner-grow text-primary" role="status">
                     <span class="sr-only">Loading...</span>
                   </div>
