Improve Sidebar UI

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -72,4 +72,7 @@ nb-layout-column{
 #carouselExampleIndicators{
     height: 50vh;
 }
- 
+.sidebar-container{
+    display: flex;
+    flex-direction: column;
+}
